# nonebot_plugin_pixivrank_search

./: README.md  pyproject.toml  requirements.txt
pixivrank_search/: __init__.py  config.py  data_source.py  util.py
src/nonebot_plugin_pixivrank_search/: __init__.py  config.py  data_source.py  util.py
