[project]
name = "nonebot_plugin_pixivrank_search"
version = "0.2.0"
description = "基于RSSHUB阅读器实现的获取P站排行和P站搜图"
authors = [
    {name = "rf_tar_railt", email = "3165388245@qq.com"},
    {name = "HibiKier", email = "775757368@qq.com"},
]
dependencies = [
    "nonebot2[aiohttp]>=2.3.0",
    "nonebot-plugin-alconna>=0.45.4",
    "aiofiles<1.0.0,>=0.8.0",
    "beautifulsoup4<5.0.0,>=4.10.0",
    "lxml<5.0.0,>=4.7.1",
    "feedparser<7.0.0,>=6.0.8",
    "nonebot-plugin-localstore>=0.6.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "nonebot2[fastapi,uvicorn]>=2.3.0",
    "nonebot-adapter-onebot>=2.4.3",
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.4.4",
]

[tool.pdm.build]
includes = ["src"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 110
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 110
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true